# ledger

./: .dockerignore  .env.example  .gitignore  .golangci.yml  .goreleaser.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  Dockerfile.goreleaser  LICENSE  Makefile  README.md  RELEASE.md  SKILL.md  USAGE.md  agent_widget.css  agent_widget.html  agent_widget.js  config.json  coverage.json  docker-compose.yml  fix_app.py  go.mod  go.sum  import_ledger.py  ledger.spec  ledger_api.py  ledger_api_wrapper.py  main.go  mkdocs.yml  mymoney_data_20260614203414.csv  package.bat  package.sh  pyproject.toml  reasonix.toml  requirements.txt  setup.sh  ull
.codegraph/: daemon.pid
.githooks/: pre-commit
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  release.yml
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
cmd/ledger/: main.go
cmd/ledger-cli/: main.go
data/: schema.json  test.csv
deploy/: DEPLOY.md
deploy/ledger-service/: .env.example
deploy/ledger-skills/: SKILL.md
docs/: FAQ.md  GETTING_STARTED.md  INDEX.md  QUICK_REFERENCE.md  VIDEO_TUTORIAL_SCRIPT.md  _config.yml  api.md  cli.md  development.md  docker.md  index.md  web.md
docs/en/: README.md
docs/plans/: PLAN-agentchat-enhancements.md  PLAN-ai-thinking-display.md  PLAN-dashboard-stats-optimization.md  (+1 more)
e2e/: e2e_test.go
frontend/: AGENTS.md  index.html  package-lock.json  package.json  playwright.config.js  settings.html  vite.config.js
integration/: integration_test.go
internal/: budget.go  client.go  export.go  meta.go  misc.go  stats.go  tag.go  template.go  tx.go
ledger-skills/: SKILL.md
ledger_modules/: AGENTS.md  __init__.py  agent.py  agent_config_store.py  budgets.py  config.py  db.py  desktop_config.py  export_engine.py  import_engine.py  providers_config.json  transaction_types.py  transactions.py
scripts/: AGENTS.md  auto_test.py  build.ps1  build_entry.py  cli.py  deploy.py  desktop_entry.py  import_ledger.py  migrate_type.py  release.py  test_api.py  webview_api.py  win_service.ps1
skills/: AGENTS.md
src/: go.sum  main.go  package.bat  package.sh
tests/: AGENTS.md  conftest.py  test_accounts.py  test_agent_config_api.py  test_agent_config_store.py  test_api_integration.py  test_budgets.py  test_budgets_extended.py  test_cli_http.py  test_config.py  test_coverage_boost.py  test_db.py  test_desktop_config.py  test_export_engine.py  test_import_engine.py  test_integration.py  test_method_override.py  test_new_features.py  test_robustness.py  test_transaction_types.py  test_transactions.py  test_web_extended.py
web/: AGENTS.md  agent_routes.py  app.py  run.py
website/: AGENTS.md  docusaurus.config.ts  package-lock.json  sidebars.ts
(+139 files in other folders)
