[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ledger"
version = "0.3.2"
description = "个人记账系统 - 支持收支管理、预算规划、标签分类、多维统计，附带 React Web 界面"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "httpx>=0.27",
]
license = {text = "MIT"}
keywords = ["finance", "accounting", "ledger", "budget"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
lint = [
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
include = ["ledger_modules*", "web*"]

[tool.setuptools.package-data]
"*" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["ledger_modules", "web"]
omit = ["tests/*", "web/run.py"]

[tool.coverage.report]
skip_empty = true
partial_branches = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if getattr(sys, 'frozen', False):",
    "if sys.platform == 'win32':",
]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "def main():",
    "pass",
    "except ImportError:",
    "except Exception:",
    "except (ValueError, TypeError):",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
